# rusvelte-fullstack-starter-kit

./: .env.example  .gitignore
backend/: Cargo.toml  README.md
backend/migrations/: 20260326000000_setup_extensions.sql  20260326000001_create_users.sql  20260326000002_create_stores.sql  20260326000003_create_store_members.sql  20260326000004_create_store_api_tokens.sql  20260326000005_create_contact_threads.sql  20260326000006_create_contact_thread_messages.sql  20260326000007_create_payments.sql  20260326000008_create_payment_events.sql  20260326000009_create_provider_webhook_events.sql  20260326000010_create_store_balance_summaries.sql  20260326000011_create_store_balance_ledger_entries.sql  20260326000012_create_store_balance_settlements.sql  20260326000013_create_store_bank_accounts.sql  20260326000014_create_store_payout_requests.sql  20260326000015_create_platform_ledger_entries.sql  20260326000016_create_provider_balance_snapshots.sql  20260326000017_create_user_notifications.sql  20260326000018_create_callback_deliveries.sql  20260326000019_create_callback_attempts.sql  20260326000020_create_audit_logs.sql  20260326000021_enforce_store_bank_default_uniqueness.sql  20260401000000_create_sessions.sql  20260401000001_seed_dev_user.sql  20260401000002_add_store_api_token_indexes.sql  20260401000003_create_payment_idempotency_keys.sql  20260401000004_add_payment_webhook_support.sql
backend/src/: lib.rs  main.rs  router.rs
backend/src/bootstrap/: config.rs  container.rs  mod.rs  state.rs
backend/src/infrastructure/: audit.rs  mod.rs
backend/src/infrastructure/db/: mod.rs
backend/src/infrastructure/provider/: client.rs  config.rs  mod.rs  qris_otomatis.rs  raw.rs
backend/src/infrastructure/redis/: mod.rs
backend/src/infrastructure/security/: argon2.rs  captcha.rs  (+3 more)
backend/src/modules/: mod.rs
backend/src/shared/: audit.rs  auth.rs  error.rs  idempotency.rs  mod.rs  money.rs  pagination.rs  time.rs  tracing.rs
backend/tests/: issue12_webhooks.rs  issue13_balances.rs  issue14_settlements.rs  issue15_bank_accounts.rs
(+175 files in other folders)
