[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.25.4", features = ["tokio-comp", "ahash"] }
bb8-redis = "0.15.0"
bb8 = "0.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.4", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "set-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
anyhow = "1.0.86"
async-trait = "0.1.80"
